<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing">

    <ImageView
        android:id="@+id/avatarImage"
        android:layout_width="@dimen/post_avatar_size"
        android:layout_height="@dimen/post_avatar_size"
        android:contentDescription="@string/author_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/authorName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/date"
        app:layout_constraintEnd_toStartOf="@id/options"
        app:layout_constraintStart_toEndOf="@id/avatarImage"
        app:layout_constraintTop_toTopOf="@id/avatarImage"
        tools:text="Имя автора поста" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="@id/avatarImage"
        app:layout_constraintEnd_toEndOf="@id/authorName"
        app:layout_constraintStart_toStartOf="@id/authorName"
        app:layout_constraintTop_toBottomOf="@id/authorName"
        tools:text="24.04.2022" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_options_24dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/headerBarrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="authorName,date,avatarImage" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/postText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerBarrier"
        tools:text="@string/post_text" />

    <!--com.google.android.material.checkbox.MaterialCheckBox
    android:id="@+id/likes"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:contentDescription="@string/description_post_like"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/headerBarrier"
    android:button="@drawable/ic_like_24new"
    tools:checked="@sample/posts.json/data/likedByMe"
    tools:text="@sample/posts.json/data/likes"
    style="@style/Widget.AppTheme.LikeCheckBox"/-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/likes"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:contentDescription="@string/description_post_like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postText"
        tools:text="1005" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        style="@style/Widget.AppTheme.ShareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_post_share"
        app:layout_constraintStart_toEndOf="@id/likes"
        app:layout_constraintTop_toBottomOf="@id/postText"
        tools:text="12" />


    <!--    <androidx.appcompat.widget.AppCompatImageButton-->
    <!--        android:id="@+id/share"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="4dp"-->
    <!--        android:background="@android:color/transparent"-->
    <!--        app:layout_constraintBottom_toBottomOf="@id/likes"-->
    <!--        app:layout_constraintStart_toEndOf="@id/likes"-->
    <!--        app:layout_constraintTop_toTopOf="@id/likes"-->
    <!--        app:srcCompat="@drawable/ic_share_24dp" />-->

    <!--    <androidx.appcompat.widget.AppCompatTextView-->
    <!--        android:id="@+id/sharedCount"-->
    <!--        android:layout_width="36dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="4dp"-->
    <!--        app:layout_constraintBottom_toBottomOf="@id/likes"-->
    <!--        app:layout_constraintEnd_toStartOf="@id/views"-->
    <!--        app:layout_constraintHorizontal_chainStyle="spread_inside"-->
    <!--        app:layout_constraintStart_toEndOf="@id/share"-->
    <!--        app:layout_constraintTop_toTopOf="@id/likes"-->
    <!--        tools:text="12" />-->

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/likes"
        app:layout_constraintEnd_toStartOf="@id/viewsCount"
        app:layout_constraintTop_toTopOf="@+id/likes"
        app:srcCompat="@drawable/ic_view_24dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/viewsCount"
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="@id/likes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/likes"
        tools:text="493k" />

</androidx.constraintlayout.widget.ConstraintLayout>